// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with other props 1`] = `
<div>
  <a
    href="http://line.me/R/msg/text/?text"
  >
    <img
      alt="LINEで送る"
      src="http://i.imgur.com/cfjCxrh.png"
      style={
        Object {
          "height": 20,
          "width": 82,
        }
      }
    />
  </a>
</div>
`;

exports[`renders correctly with required props 1`] = `
<div>
  <a
    href="http://line.me/R/msg/text/?"
  >
    <img
      alt="LINEで送る"
      src="http://i.imgur.com/voMN0NH.png"
      style={
        Object {
          "height": 20,
          "width": 20,
        }
      }
    />
  </a>
</div>
`;
